--- a/jiajiang.html
+++ b/jiajiang.html
@@ -10,6 +10,7 @@
 			<nav class="navbar">
 				<a href="index.html">非遗木版年画</a>
 		    	<a href="mianzhu.html">绵竹木版年画</a>
+				<a href="#jiemian"><img src="夹江logo.png"/></a>
 			</nav>
 		</header>
 		<div class="video">
@@ -17,5 +18,44 @@
 			  <source src="jiajiang.mp4" type="video/mp4">
 			</video>
 		</div>
+		<div class="jiemian" id="jiemian">
+			<div class="news">
+				<h1>新闻</h1>
+				<ul>
+					<li><a href="https://www.ihchina.cn/project_details/14160/" target="_blank">木版年画（夹江年画）</a></li>
+					<li><a href="https://new.qq.com/rain/a/20231102A08RG500" target="_blank">十年历程，共享旅博 | 人物访谈——夹江年画非遗技艺传承人篇</a></li>
+					<li><a href="https://www.thepaper.cn/newsDetail_forward_21672263" target="_blank">【春节特辑】夹江年画始于古代门神画‖周杰华</a></li>
+					<li><a href="http://www.jiajiang.gov.cn/jjx/fwzwhyc/201902/5fbbce81e042475aa59c9f5c606db55f.shtml" target="_blank">夹江年画纸上的乡关和年味</a></li>
+					<li><a href="https://k.sina.com.cn/article_2125816842_7eb5640a019006u5h.html" target="_blank">身边的非遗| 夹江年画：找回失去的那份乡关和年味儿！</a></li>
+				</ul>
+			</div>
+			<div class="shipin">
+				<video controls id="myVideo">
+				  <source src="jiajiang.mp4" type="video/mp4">
+				</video>
+			</div>
+			<div class="text">
+				<hr/>
+					<h1>夹江木版年画</h1>
+					<h3>木版年画（夹江年画），四川省夹江县传统美术，国家级非物质文化遗产之一。</h3>
+					<h3>夹江年画是四川省夹江县特有的一种民间美术样式，据记载，夹江年画与绵竹年画和梁平年画齐名，为四川三大年画之一，约在明代中叶，夹江县已出现年画作坊，董大兴荣作坊为其中的代表。夹江年画题材丰富，主要内容包括神像、门神、山水花鸟、戏剧故事、神话传说等，也不乏反映民间生活、针砭时弊之作，在众多作品中，“黄丹门神”较受人们的欢迎。夹江年画以木版套色印制，色版少则四套，多则八套，具有色彩艳丽、工艺精湛的特点。</h3>
+					<a href="https://baike.baidu.com/item/%E6%9C%A8%E7%89%88%E5%B9%B4%E7%94%BB%EF%BC%88%E5%A4%B9%E6%B1%9F%E5%B9%B4%E7%94%BB%EF%BC%89/53487837" target="_blank">了解更多</a>
+					<a href="http://jjxnhyjs.com/" target="_blank">夹江年画研究所</a>
+			</div>
+		</div>
+		<script>
+		    var video = document.getElementById("myVideo");
+		    var videos = ["jiajiang.mp4", "jiajiang1.mp4"];
+		    var index = 0;
+		
+		    video.addEventListener("ended", function() {
+		        index++;
+		        if (index == videos.length) {
+		            index = 0;
+		        }
+		        video.src = videos[index];
+		        video.play();
+		    });
+		</script>
 	</body>
 </html>
