--- a/mianzhu.html
+++ b/mianzhu.html
@@ -49,7 +49,7 @@
 		</div>
 		<script>
 		    var video = document.getElementById("myVideo");
-		    var videos = ["mianzhu.mp4", "mianzhu1.mp4", "mianzhu2.mp4", "mianzhu3.mp4"];
+		    var videos = ["mianzhu.mp4", "mianzhu2.mp4", "mianzhu3.mp4"];
 		    var index = 0;
 		
 		    video.addEventListener("ended", function() {
