--- a/jiajiang.html
+++ b/jiajiang.html
@@ -45,7 +45,7 @@
 		</div>
 		<script>
 		    var video = document.getElementById("myVideo");
-		    var videos = ["jiajiang.mp4", "jiajiang1.mp4"];
+		    var videos = ["jiajiang.mp4"];
 		    var index = 0;
 		
 		    video.addEventListener("ended", function() {
