--- a/mianzhu.html
+++ b/mianzhu.html
@@ -11,6 +11,7 @@
 				<a href="index.html">非遗木版年画</a>
 		    	<a href="jiajiang.html">四川夹江年画</a>
 				<a href="#jiemian"><img src="绵竹logo.png"/></a>
+				<a href="#more"><img src="绵竹logo.png"/></a>
 			</nav>
 		</header>
 		<div class="video">
@@ -46,10 +47,17 @@
 				<h3>绵竹年画以木版刻印、手工彩绘为特色，又称绵竹木版年画。始于宋代盛于明清，内容以吉祥喜庆、民间传说、乡土生活等为主，构图丰富夸张、色彩鲜艳明快，具有鲜明的农耕文化特色。</h3>
 				<a href="https://baike.baidu.com/item/%E7%BB%B5%E7%AB%B9%E6%9C%A8%E7%89%88%E5%B9%B4%E7%94%BB/5409655" target="_blank">了解更多</a>
 			</div>
+			<hr/>
+		</div>
+		<div class="jiemian" id="more">
+			<span class="right"><a href="m1.html"><img src="历史渊源.jpg"/></a></span>
+			<span><a href="m2.html"><img src="文化特征.jpg"/></a></span>
+			<span class="right"><a href="m3.html"><img src="制作工序.jpg"/></a></span>
+			<span><a href="m4.html"><img src="传承保护.jpg"/></a></span>
 		</div>
 		<script>
 		    var video = document.getElementById("myVideo");
-		    var videos = ["mianzhu.mp4", "mianzhu2.mp4", "mianzhu3.mp4"];
+		    var videos = ["mianzhu.mp4","mianzhu2.mp4", "mianzhu3.mp4"];
 		    var index = 0;
 		
 		    video.addEventListener("ended", function() {
